If applied this commit will change title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8" />
-        <title>Isaiah Cole UI/UX Designer New York,NY</title>
+        <title>Isaiah Cole Product Designer New York,NY</title>
     </head>
 
     <!-- * to add comments like this, select or (be on the line) that you want to comment out and hit "CMD + /" -->
