If applied this commit will link to linkup page

--- a/linkup.html
+++ b/linkup.html
@@ -24,46 +24,15 @@
 
         <!-- * our main content below -->
         <main>
-            <div>
-                <h1>Hello my name is Isaiah</h1>
-                <span> <h1>I am a UX/UI designer from NYC</h1> </span>
-                <p></p>
-            </div>
+        <div>
+<div>
+  <picture>
+    <source srcset="img/linkup/linkup.png" media="(max-width:767px)" />
+    <img src="img/linkup/linkup.png" alt="My Image" />
+</picture>
 
-            <div>
-                <div><h2>My Work</h2></div>
-                <div>
-                    <div>
-                        <picture>
-                            <source srcset="img/linkup/linkup-thumbnail.png" media="(max-width:767px)" />
-                            <img src="img/linkup/linkup-thumbnail.png" alt="My Image" />
-                        </picture>
-                    </div>
-                    <div>
-                        <h3>LinkUp</h3>
-                        <p>
-                            A location based web app with multiple break points for mobile, tablet and desktop. Using A/B testing and conducting user research I created an app that allows user to find food on the go based on their
-                            preferences
-                        </p>
-                        <a href="linkup.html">Read more</a>
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <picture>
-                            <source srcset="img/sterlingacumen/sterling-acumen-thumbnail.png" media="(max-width:767px)" />
-                            <img src="img/sterlingacumen/sterling-acumen-thumbnail.png" alt="My Image" />
-                        </picture>
-                    </div>
-                    <div>
-                        <h3>Sterling Acumen</h3>
-                        <p>
-                            A native Android and iOS mobile banking app geared towards teens and young adults who are new to managing finances.
-                        </p>
-                        <a href="#">Read more</a>
-                    </div>
-                </div>
-            </div>
+  </div>
+
         </main>
         <!-- * end of main tag -->
 
