If applied this commit will change read more link into a button

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-        <meta charset="utf-8" />
-        <title>Isaiah Cole Product Designer New York,NY</title>
+      <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+      <link rel="stylesheet" href="/css/master.css">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
+
 
     <!-- * to add comments like this, select or (be on the line) that you want to comment out and hit "CMD + /" -->
     <body>
@@ -45,7 +50,8 @@
                             A location based web app with multiple break points for mobile, tablet and desktop. Using A/B testing and conducting user research I created an app that allows user to find food on the go based on their
                             preferences
                         </p>
-                        <a href="linkup.html">Read more</a>
+                        <a href="linkup.html" class="button">Read more</a>
+
                     </div>
                 </div>
                 <div>
@@ -60,7 +66,7 @@
                         <p>
                             A native Android and iOS mobile banking app geared towards teens and young adults who are new to managing finances.
                         </p>
-                        <a href="#">Read more</a>
+                        <a href="#" class="button">Read more</a>
                     </div>
                 </div>
             </div>
