--- a/linkup.html
+++ b/linkup.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8" />
         <title>Isaiah Cole Product Designer New York,NY</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
 
     <!-- * to add comments like this, select or (be on the line) that you want to comment out and hit "CMD + /" -->
     <body>
         <!-- * this should be header tag below -->
         <header>
-            <img alt="" />
             <img src="img/logocopy.png" alt="Logo" />
 
             <nav>
@@ -24,15 +24,14 @@
 
         <!-- * our main content below -->
         <main>
-        <div>
-<div>
-  <picture>
-    <source srcset="img/linkup/linkup.png" media="(max-width:767px)" />
-    <img src="img/linkup/linkup.png" alt="My Image" />
-</picture>
-
-  </div>
-
+            <div>
+                <div>
+                    <picture>
+                        <source srcset="img/linkup/linkup.png" media="(max-width:767px)" />
+                        <img src="img/linkup/linkup.png" alt="My Image" />
+                    </picture>
+                </div>
+            </div>
         </main>
         <!-- * end of main tag -->
 
@@ -46,32 +45,32 @@
                     <a href="tel3473249093">(347)324-9093</a>
                     Prefer sending me an email?
                 </p>
+            </div>
+            <div>
                 <div>
-                    <div>
-                        <a href="mailto:Isaiahc1996@gmail.com">Email me</a>
-                    </div>
-                    <div>
-                        <a href="LINKEDIN-URL" target="_blank">
-                            <svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.0" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                <g>
-                                    <path d="M32,30c0,1.104-0.896,2-2,2H2c-1.104,0-2-0.896-2-2V2c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V30z" fill="#007BB5" />
-                                    <g>
-                                        <rect fill="#FFFFFF" height="14" width="4" x="7" y="11" />
-                                        <path d="M20.499,11c-2.791,0-3.271,1.018-3.499,2v-2h-4v14h4v-8c0-1.297,0.703-2,2-2c1.266,0,2,0.688,2,2v8h4v-7    C25,14,24.479,11,20.499,11z" fill="#FFFFFF" />
-                                        <circle cx="9" cy="8" fill="#FFFFFF" r="2" />
-                                    </g>
-                                </g>
-                                <g />
-                                <g />
-                                <g />
-                                <g />
-                                <g />
-                                <g />
-                            </svg>
-                        </a>
-                    </div>
-                    <p>Copyright ISAIAH-COLE 2021</p>
+                    <a href="mailto:Isaiahc1996@gmail.com">Email me</a>
                 </div>
+                <div>
+                    <a href="LINKEDIN-URL" target="_blank">
+                        <svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.0" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <g>
+                                <path d="M32,30c0,1.104-0.896,2-2,2H2c-1.104,0-2-0.896-2-2V2c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V30z" fill="#007BB5" />
+                                <g>
+                                    <rect fill="#FFFFFF" height="14" width="4" x="7" y="11" />
+                                    <path d="M20.499,11c-2.791,0-3.271,1.018-3.499,2v-2h-4v14h4v-8c0-1.297,0.703-2,2-2c1.266,0,2,0.688,2,2v8h4v-7    C25,14,24.479,11,20.499,11z" fill="#FFFFFF" />
+                                    <circle cx="9" cy="8" fill="#FFFFFF" r="2" />
+                                </g>
+                            </g>
+                            <g />
+                            <g />
+                            <g />
+                            <g />
+                            <g />
+                            <g />
+                        </svg>
+                    </a>
+                </div>
+                <p>Copyright ISAIAH-COLE 2021</p>
             </div>
         </footer>
         <!-- * footer end -->
