--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8" />
         <title>Isaiah Cole UI/UX Designer About</title>
     </head>
@@ -40,7 +41,7 @@
                             meet goals and helped foster stellar customer service practices in myself and those on my team. I also have marketing experience for a new startup based in NYC, creating an online presence through social media.
                             Creating a sense of empathy for people has always been at the forefront during my time working in the customer-facing retail industry. I have taken this focus and pivoted it into a people-first design mindset.
                         </p>
-                        <a href="resume/coverisaiahresumecopy.pdf" download>Download my CV</a>
+                        <a href="resume/coleisaiahresumecopy.pdf" download>Download my CV</a>
                     </div>
 
                     <div>
