If applied this commit will apply CSS styling to these pages
Link Up- added css tags to head
CSS- changed color codes and added button styling for "read more" "download my cv"
About page- Added css tags to head
added class tag to "download my cv"

--- a/about.html
+++ b/about.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" href="/css/master.css" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&display=swap" rel="stylesheet" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta charset="utf-8" />
         <title>Isaiah Cole UI/UX Designer About</title>
     </head>
@@ -41,7 +46,7 @@
                             meet goals and helped foster stellar customer service practices in myself and those on my team. I also have marketing experience for a new startup based in NYC, creating an online presence through social media.
                             Creating a sense of empathy for people has always been at the forefront during my time working in the customer-facing retail industry. I have taken this focus and pivoted it into a people-first design mindset.
                         </p>
-                        <a href="resume/coleisaiahresumecopy.pdf" download>Download my CV</a>
+                        <a href="resume/coleisaiahresumecopy.pdf" class=".button.contact" download>Download my CV</a>
                     </div>
 
                     <div>
