--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-      <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-      <link rel="stylesheet" href="/css/master.css">
-      <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&display=swap" rel="stylesheet">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" href="/css/master.css" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&display=swap" rel="stylesheet" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Isaiah Cole Product Designer New York,NY</title>
     </head>
-
 
     <!-- * to add comments like this, select or (be on the line) that you want to comment out and hit "CMD + /" -->
     <body>
@@ -51,7 +51,6 @@
                             preferences
                         </p>
                         <a href="linkup.html" class="button">Read more</a>
-
                     </div>
                 </div>
                 <div>
@@ -85,7 +84,7 @@
                 </p>
                 <div>
                     <div>
-                        <a href="mailto:Isaiahc1996@gmail.com">Email me</a>
+                        <a href="mailto:Isaiahc1996@gmail.com" class=".button.contact">Send me an email</a>
                     </div>
                     <div>
                         <a href="LINKEDIN-URL" target="_blank">
