--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
-        <link rel="stylesheet" href="/css/master.css" />
+        <link rel="stylesheet" href="/css/stle.css" />
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&display=swap" rel="stylesheet" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -46,7 +46,7 @@
                             meet goals and helped foster stellar customer service practices in myself and those on my team. I also have marketing experience for a new startup based in NYC, creating an online presence through social media.
                             Creating a sense of empathy for people has always been at the forefront during my time working in the customer-facing retail industry. I have taken this focus and pivoted it into a people-first design mindset.
                         </p>
-                        <a href="resume/coleisaiahresumecopy.pdf" class=".button.contact" download>Download my CV</a>
+                        <a href="resume/coleisaiahresumecopy.pdf" class=".button" download>Download my CV</a>
                     </div>
 
                     <div>
