If applied these commits will add style elements to the index, about and linkup page

--- a/about.html
+++ b/about.html
@@ -15,7 +15,9 @@
     <body>
         <!-- * this should be header tag below -->
         <header>
-            <img src="img/logocopy.png" alt="Logo" />
+          <div class="container">
+
+            <img src="img/logocopy.png" alt="Logo" class="logo" />
 
             <nav>
                 <ul>
@@ -24,13 +26,14 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
+            </div>
         </header>
         <!-- * end of header tag -->
 
         <!-- * our main content below -->
         <main>
             <div>
-                <div>
+                <div class="container">
                     <h1>About</h1>
                     <div>
                         <picture>
@@ -46,7 +49,7 @@
                             meet goals and helped foster stellar customer service practices in myself and those on my team. I also have marketing experience for a new startup based in NYC, creating an online presence through social media.
                             Creating a sense of empathy for people has always been at the forefront during my time working in the customer-facing retail industry. I have taken this focus and pivoted it into a people-first design mindset.
                         </p>
-                        <a href="resume/coleisaiahresumecopy.pdf" class=".button" download>Download my CV</a>
+                        <a href="resume/coleisaiahresumecopy.pdf" class="buttoncontact" download>Download my CV</a>
                     </div>
 
                     <div>
@@ -77,7 +80,7 @@
         </main>
 
         <footer id="contact">
-            <div>
+            <div class="container">
                 <h2>Get In Touch</h2>
                 <p>
                     Like my work and want to discuss more opportunties? Please dont hestiate to contact me. Call or text me at
