--- a/linkup.html
+++ b/linkup.html
@@ -15,7 +15,8 @@
     <body>
         <!-- * this should be header tag below -->
         <header>
-            <img src="img/logocopy.png" alt="Logo" />
+          <div class="container">
+            <img src="img/logocopy.png" alt="Logo" class="logo" />
 
             <nav>
                 <ul>
@@ -24,13 +25,14 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
+            </div>
         </header>
         <!-- * end of header tag -->
 
         <!-- * our main content below -->
         <main>
             <div>
-                <div>
+                <div class="container">
                     <picture>
                         <source srcset="img/linkup/linkup.png" media="(max-width:767px)" />
                         <img src="img/linkup/linkup.png" alt="My Image" />
@@ -43,7 +45,7 @@
         <!-- * footer start -->
 
         <footer id="contact">
-            <div>
+            <div class="container">
                 <h2>Get In Touch</h2>
                 <p>
                     Like my work and want to discuss more opportunties? Please dont hestiate to contact me. Call or text me at
@@ -52,10 +54,10 @@
                 </p>
             </div>
             <div>
-                <div>
+                <div class="container">
                     <a href="mailto:Isaiahc1996@gmail.com">Email me</a>
                 </div>
-                <div>
+                <div class="container">
                     <a href="LINKEDIN-URL" target="_blank">
                         <svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.0" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <g>
@@ -75,7 +77,10 @@
                         </svg>
                     </a>
                 </div>
-                <p>Copyright ISAIAH-COLE 2021</p>
+                <div class="container">
+                  <p>Copyright ISAIAH-COLE 2021</p>
+
+                </div>
             </div>
         </footer>
         <!-- * footer end -->
