--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <body>
         <!-- * this should be header tag below -->
         <header>
+          <div class="container">
             <img alt="" />
-            <img src="img/logocopy.png" alt="Logo" />
+            <img src="img/logocopy.png" alt="Logo" class="logo"/>
 
             <nav>
                 <ul>
@@ -24,19 +25,24 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
+          </div>
         </header>
         <!-- * end of header tag -->
 
         <!-- * our main content below -->
         <main>
-            <div>
+            <div id="hero">
+              <div class="container">
                 <h1>Hello my name is Isaiah</h1>
                 <span> <h1>I am a UX/UI designer from NYC</h1> </span>
                 <p></p>
+              </div>
             </div>
 
-            <div>
-                <div><h2>My Work</h2></div>
+            <div class="container">
+                <div class="row">
+                  <h2>My Work</h2>
+                </div>
                 <div>
                     <div>
                         <picture>
@@ -44,22 +50,24 @@
                             <img src="img/linkup/linkup-thumbnail.png" alt="My Image" />
                         </picture>
                     </div>
-                    <div>
+                    <div class="work">
                         <h3>LinkUp</h3>
                         <p>
                             A location based web app with multiple break points for mobile, tablet and desktop. Using A/B testing and conducting user research I created an app that allows user to find food on the go based on their
                             preferences
                         </p>
+                        <div class="row">
                         <a href="linkup.html" class="button">Read more</a>
+                      </div>
                     </div>
                 </div>
-                <div>
+                <div class="work">
                     <div>
                         <picture>
                             <source srcset="img/sterlingacumen/sterling-acumen-thumbnail.png" media="(max-width:767px)" />
                             <img src="img/sterlingacumen/sterling-acumen-thumbnail.png" alt="My Image" />
                         </picture>
-                    </div>
+                  </div>
                     <div>
                         <h3>Sterling Acumen</h3>
                         <p>
@@ -75,7 +83,7 @@
         <!-- * footer start -->
 
         <footer id="contact">
-            <div>
+            <div class="container">
                 <h2>Get In Touch</h2>
                 <p>
                     Like my work and want to discuss more opportunties? Please dont hestiate to contact me. Call or text me at
