If applied these changes will add style elements

--- a/index.html
+++ b/index.html
@@ -14,62 +14,65 @@
     <body>
         <!-- * this should be header tag below -->
         <header>
-          <div class="container">
-            <img alt="" />
-            <img src="img/logocopy.png" alt="Logo" class="logo"/>
+            <div class="container">
+                <img src="img/logocopy.png" alt="Logo" class="logo" />
 
-            <nav>
-                <ul>
-                    <li><a href="index.html">Work</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-          </div>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Work</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <!-- * end of header tag -->
 
         <!-- * our main content below -->
         <main>
             <div id="hero">
-              <div class="container">
-                <h1>Hello my name is Isaiah</h1>
-                <span> <h1>I am a UX/UI designer from NYC</h1> </span>
-                <p></p>
-              </div>
+                <div class="container">
+                    <h1>Hello my name is Isaiah</h1>
+                    <span> <h2>I am a UX/UI designer from NYC and I create beautiful people centric designs</h2> </span>
+                    <p></p>
+                </div>
             </div>
 
             <div class="container">
                 <div class="row">
-                  <h2>My Work</h2>
+                    <h2>My Work</h2>
                 </div>
-                <div>
-                    <div>
+                <div class="row">
+                    <div class="col-md-6 col-lg-7">
                         <picture>
                             <source srcset="img/linkup/linkup-thumbnail.png" media="(max-width:767px)" />
                             <img src="img/linkup/linkup-thumbnail.png" alt="My Image" />
                         </picture>
                     </div>
                     <div class="work">
-                        <h3>LinkUp</h3>
+                        <div class="column col-md-6 col-lg-5">
+                            <h3>LinkUp</h3>
+                        </div>
                         <p>
                             A location based web app with multiple break points for mobile, tablet and desktop. Using A/B testing and conducting user research I created an app that allows user to find food on the go based on their
                             preferences
                         </p>
                         <div class="row">
-                        <a href="linkup.html" class="button">Read more</a>
-                      </div>
+                            <a href="linkup.html" class="button">Read more</a>
+                        </div>
                     </div>
                 </div>
-                <div class="work">
-                    <div>
+                <div class="row">
+                    <div class="col-md-6 col-lg-7">
                         <picture>
                             <source srcset="img/sterlingacumen/sterling-acumen-thumbnail.png" media="(max-width:767px)" />
                             <img src="img/sterlingacumen/sterling-acumen-thumbnail.png" alt="My Image" />
                         </picture>
-                  </div>
+                    </div>
                     <div>
-                        <h3>Sterling Acumen</h3>
+                        <div class="column col-md-6 col-lg-5">
+                            <h3>Sterling Acumen</h3>
+                        </div>
                         <p>
                             A native Android and iOS mobile banking app geared towards teens and young adults who are new to managing finances.
                         </p>
