--- a/about.html
+++ b/about.html
@@ -54,7 +54,9 @@
 
                     <div>
                         <h2>Skills & Tools</h2>
-                        <h3>Relevant Skills</h3>
+                          </div>
+                            <div class="col-md-6">
+                    <h3>Relevant Skills</h3>
                         <ul>
                             <li>Wireframing</li>
                             <li>Rapid Prototyping</li>
@@ -66,6 +68,7 @@
                             <li>Branding</li>
                             <li>Product Strategy</li>
                         </ul>
+                        </div>
                         <h3>Tools</h3>
                         <ul>
                             <li>Sketch</li>
