--- a/about.html
+++ b/about.html
@@ -84,6 +84,9 @@
 
         <footer id="contact">
             <div class="container">
+              <div class="centerMe"
+
+
                 <h2>Get In Touch</h2>
                 <p>
                     Like my work and want to discuss more opportunties? Please dont hestiate to contact me. Call or text me at
@@ -92,7 +95,7 @@
                 </p>
                 <div>
                     <div>
-                        <a href="mailto:Isaiahc1996@gmail.com">Email me</a>
+                        <a href="mailto:Isaiahc1996@gmail.com" class=".button.contact">Send me an email</a>
                     </div>
                     <div>
                         <a href="LINKEDIN-URL" target="_blank">
@@ -117,7 +120,8 @@
                     <p>Copyright ISAIAH-COLE 2021</p>
                 </div>
             </div>
+          </div>
         </footer>
         <!-- * footer end -->
     </body>
-</html>
+    </html>
