If applied these commits will change font and add a JS file

--- a/about.html
+++ b/about.html
@@ -3,9 +3,8 @@
     <head>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
-        <link rel="stylesheet" href="/css/stle.css" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" />
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&display=swap" rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta charset="utf-8" />
         <title>Isaiah Cole UI/UX Designer About</title>
@@ -17,7 +16,7 @@
         <header>
           <div class="container">
 
-            <img src="img/logocopy.png" alt="Logo" class="logo" />
+            <img src="img/logo.png" alt="Logo" class="logo" />
 
             <nav>
                 <ul>
@@ -37,8 +36,8 @@
                     <h1>About</h1>
                     <div>
                         <picture>
-                            <source srcset="img/aboutpageimg.jpg" media="(max-width:767px)" />
-                            <img src="img/aboutpageimg.jpg" alt="My Image" />
+                            <source srcset="img/portfoliopicture.jpg" media="(max-width:767px)" />
+                            <img src="img/portfoliopicture.jpg" alt="My Image" />
                         </picture>
                     </div>
 
