--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" />
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&display=swap" rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Isaiah Cole Product Designer New York,NY</title>
     </head>
@@ -14,7 +14,7 @@
         <!-- * this should be header tag below -->
         <header>
             <div class="container">
-                <img src="img/logocopy.png" alt="Logo" class="logo" />
+                <img src="img/logo.png" alt="Logo" class="logo" />
 
                 <nav>
                     <ul>
@@ -31,7 +31,7 @@
         <main>
             <div id="hero">
                 <div class="container">
-                    <h1>Hello my name is Isaiah</h1>
+                    <h1>Hello my name is Isaiah Cole</h1>
                     <span> <h2>I am a UX/UI designer from NYC and I create beautiful people centric designs</h2> </span>
                     <p></p>
                 </div>
@@ -1061,5 +1061,6 @@
           </div>
         </footer>
         <!-- * footer end -->
+<script src="scripts.js"></script>
     </body>
 </html>
