--- a/linkup.html
+++ b/linkup.html
@@ -4,8 +4,8 @@
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="stylesheet" href="/css/style.css" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" />
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&display=swap" rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
         <meta charset="utf-8" />
         <title>Isaiah Cole Product Designer New York,NY</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -16,7 +16,7 @@
         <!-- * this should be header tag below -->
         <header>
           <div class="container">
-            <img src="img/logocopy.png" alt="Logo" class="logo" />
+            <img src="img/logo.png" alt="Logo" class="logo" />
 
             <nav>
                 <ul>
