--- a/about.html
+++ b/about.html
@@ -54,7 +54,8 @@
                     <div>
                         <h2>Skills & Tools</h2>
                           </div>
-                            <div class="col-md-6">
+                          <div class="row">
+                            <div class="col-md-6 col-lg-7">
                     <h3>Relevant Skills</h3>
                         <ul>
                             <li>Wireframing</li>
@@ -83,7 +84,7 @@
 
         <footer id="contact">
             <div class="container">
-              <div class="centerMe"
+              <div class="centerMe">
 
 
                 <h2>Get In Touch</h2>
