--- a/index.html
+++ b/index.html
@@ -1014,6 +1014,7 @@
       </g>
   </svg>
                   </div>
+                </div>
 
     </main>
         <!-- * end of main tag -->
@@ -1022,7 +1023,7 @@
 
         <footer id="contact">
             <div class="container">
-              <div class="centerMe"
+              <div class="centerMe">
 
 
                 <h2>Get In Touch</h2>
@@ -1061,6 +1062,6 @@
           </div>
         </footer>
         <!-- * footer end -->
-<script src="scripts.js"></script>
+<script src="/js/scripts.js"></script>
     </body>
 </html>
