If applied these commits will fix JS file issues

--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
                     <h2>My Work</h2>
 
                 <div class="row">
-                </div>
+
                     <div class="col-md-6 col-lg-7">
                         <picture>
                             <source srcset="img/linkup/linkup-thumbnail.png" media="(max-width:767px)" />
                             <img src="img/linkup/linkup-thumbnail.png" alt="My Image" />
                         </picture>
                     </div>
+                      </div>
                         <div class="col-md-6 col-lg-5">
                             <h3>LinkUp</h3>
 
@@ -1062,6 +1063,6 @@
           </div>
         </footer>
         <!-- * footer end -->
-<script src="/js/scripts.js"></script>
+<script src="js/scripts.js"></script>
     </body>
 </html>
