If applied these commits will correct alignment issues in CSS

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta charset="utf-8" />
+        <i class="fas fa-bars"></i>
         <title>Isaiah Cole UI/UX Designer About</title>
     </head>
 
@@ -21,6 +22,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Work</a></li>
+                    <li><a href="resume/coleisaiahresumecopy.pdf">Resume</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -90,12 +92,12 @@
                 <h2>Get In Touch</h2>
                 <p>
                     Like my work and want to discuss more opportunties? Please dont hestiate to contact me. Call or text me at
-                    <a href="tel3473249093">(347)324-9093</a>
+                    <a class="contactme"href="tel3473249093">(347)324-9093</a>
                     Prefer sending me an email?
                 </p>
                 <div>
                     <div>
-                        <a href="mailto:Isaiahc1996@gmail.com" class=".button.contact">Send me an email</a>
+                        <a href="mailto:Isaiahc1996@gmail.com" class="contactme">Send me an email</a>
                     </div>
                     <div>
                         <a href="LINKEDIN-URL" target="_blank">
