--- a/index.html
+++ b/index.html
@@ -8,25 +8,32 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Isaiah Cole Product Designer New York,NY</title>
         <script src="js/scripts.js"></script>
-
-    </head>
+         </head>
 
     <!-- * to add comments like this, select or (be on the line) that you want to comment out and hit "CMD + /" -->
     <body>
 
         <!-- * this should be header tag below -->
         <header>
+          <div class="container">
+    <div class="navtoggle" id="myNavtoggle">
             <div class="container">
-                <img src="img/logo.png" alt="Logo" class="logo" />
+              <i class="fas fa-bars"></i>
 
+                <img src="img/logo.png" alt="Logo" class="logo" />
+                  </div>
+                    </div>
                 <nav>
                     <ul>
                         <li><a href="index.html">Work</a></li>
+                        <li><a href="resume/coleisaiahresumecopy.pdf">Resume</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="#contact">Contact</a></li>
+                        <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
                     </ul>
                 </nav>
             </div>
+            <hr>
         </header>
         <!-- * end of header tag -->
 
@@ -52,7 +59,7 @@
                             <img src="img/linkup/linkup-thumbnail.png" alt="My Image" />
                         </picture>
                     </div>
-                      </div>
+
                         <div class="col-md-6 col-lg-5">
                             <h3>LinkUp</h3>
 
@@ -61,6 +68,7 @@
                             preferences
                         </p>
                             <a href="linkup.html" class="button">Read more</a>
+</div>
                     </div>
                 </div>
                 <div class="row">
@@ -81,7 +89,7 @@
                     </div>
                 </div>
               </div>
-/* Animation*/
+
               <div class="row">
                   <div class="col-md-6 col-lg-7">
                     <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="505" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -1033,12 +1041,12 @@
                 <h2>Get In Touch</h2>
                 <p>
                     Like my work and want to discuss more opportunties? Please dont hestiate to contact me. Call or text me at
-                    <a href="tel3473249093">(347)324-9093</a>
+                    <a class="contactme"href="tel3473249093">(347)324-9093</a>
                     Prefer sending me an email?
                 </p>
                 <div>
                     <div>
-                        <a href="mailto:Isaiahc1996@gmail.com" class=".button.contact">Send me an email</a>
+                        <a href="mailto:Isaiahc1996@gmail.com" class="contactme">Send me an email</a>
                     </div>
                     <div>
                         <a href="LINKEDIN-URL" target="_blank">
