--- a/linkup.html
+++ b/linkup.html
@@ -2,11 +2,12 @@
 <html lang="en" dir="ltr">
     <head>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css"/>
         <link rel="stylesheet" href="/css/style.css" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
         <meta charset="utf-8" />
+        <i class="fas fa-bars"></i>
         <title>Isaiah Cole Product Designer New York,NY</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
@@ -21,6 +22,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Work</a></li>
+                    <li><a href="resume/coleisaiahresumecopy.pdf">Resume</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -46,42 +48,43 @@
 
         <footer id="contact">
             <div class="container">
+              <div class="centerMe">
+
+
                 <h2>Get In Touch</h2>
                 <p>
                     Like my work and want to discuss more opportunties? Please dont hestiate to contact me. Call or text me at
                     <a href="tel3473249093">(347)324-9093</a>
                     Prefer sending me an email?
                 </p>
-            </div>
-            <div>
-                <div class="container">
-                    <a href="mailto:Isaiahc1996@gmail.com">Email me</a>
-                </div>
-                <div class="container">
-                    <a href="LINKEDIN-URL" target="_blank">
-                        <svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.0" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <g>
-                                <path d="M32,30c0,1.104-0.896,2-2,2H2c-1.104,0-2-0.896-2-2V2c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V30z" fill="#007BB5" />
+                <div>
+                    <div>
+                        <a href="mailto:Isaiahc1996@gmail.com" class=".button.contact">Send me an email</a>
+                    </div>
+                    <div>
+                        <a href="LINKEDIN-URL" target="_blank">
+                            <svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.0" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <g>
-                                    <rect fill="#FFFFFF" height="14" width="4" x="7" y="11" />
-                                    <path d="M20.499,11c-2.791,0-3.271,1.018-3.499,2v-2h-4v14h4v-8c0-1.297,0.703-2,2-2c1.266,0,2,0.688,2,2v8h4v-7    C25,14,24.479,11,20.499,11z" fill="#FFFFFF" />
-                                    <circle cx="9" cy="8" fill="#FFFFFF" r="2" />
+                                    <path d="M32,30c0,1.104-0.896,2-2,2H2c-1.104,0-2-0.896-2-2V2c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V30z" fill="#007BB5" />
+                                    <g>
+                                        <rect fill="#FFFFFF" height="14" width="4" x="7" y="11" />
+                                        <path d="M20.499,11c-2.791,0-3.271,1.018-3.499,2v-2h-4v14h4v-8c0-1.297,0.703-2,2-2c1.266,0,2,0.688,2,2v8h4v-7    C25,14,24.479,11,20.499,11z" fill="#FFFFFF" />
+                                        <circle cx="9" cy="8" fill="#FFFFFF" r="2" />
+                                    </g>
                                 </g>
-                            </g>
-                            <g />
-                            <g />
-                            <g />
-                            <g />
-                            <g />
-                            <g />
-                        </svg>
-                    </a>
-                </div>
-                <div class="container">
-                  <p>Copyright ISAIAH-COLE 2021</p>
-
+                                <g />
+                                <g />
+                                <g />
+                                <g />
+                                <g />
+                                <g />
+                            </svg>
+                        </a>
+                    </div>
+                    <p>Copyright ISAIAH-COLE 2021</p>
                 </div>
             </div>
+          </div>
         </footer>
         <!-- * footer end -->
     </body>
