--- a/about.html
+++ b/about.html
@@ -1,129 +1,167 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta charset="utf-8" />
-        <i class="fas fa-bars"></i>
-        <title>Isaiah Cole UI/UX Designer About</title>
-    </head>
+	<head>
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"
+		/>
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,300&display=swap"
+			rel="stylesheet"
+		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta charset="utf-8" />
+		<i class="fas fa-bars"></i>
+		<title>Isaiah Cole UI/UX Designer About</title>
+	</head>
 
-    <!-- * to add comments like this, select or (be on the line) that you want to comment out and hit "CMD + /" -->
-    <body>
-        <!-- * this should be header tag below -->
-        <header>
-          <div class="container">
+	<!-- * to add comments like this, select or (be on the line) that you want to comment out and hit "CMD + /" -->
+	<body>
+		<!-- * this should be header tag below -->
+		<header>
+			<div class="container">
+				<img src="img/logo.png" alt="Logo" class="logo" />
 
-            <img src="img/logo.png" alt="Logo" class="logo" />
+				<nav>
+					<ul>
+						<li><a href="index.html">Work</a></li>
+						<li><a href="resume/coleisaiahresumecopy.pdf">Resume</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<!-- * end of header tag -->
 
-            <nav>
-                <ul>
-                    <li><a href="index.html">Work</a></li>
-                    <li><a href="resume/coleisaiahresumecopy.pdf">Resume</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-            </div>
-        </header>
-        <!-- * end of header tag -->
+		<!-- * our main content below -->
+		<main>
+			<div>
+				<div class="container">
+					<h1>About</h1>
+					<div>
+						<picture>
+							<source
+								srcset="img/portfoliopicture.jpg"
+								media="(max-width:767px)"
+							/>
+							<img src="img/portfoliopicture.jpg" alt="My Image" />
+						</picture>
+					</div>
 
-        <!-- * our main content below -->
-        <main>
-            <div>
-                <div class="container">
-                    <h1>About</h1>
-                    <div>
-                        <picture>
-                            <source srcset="img/portfoliopicture.jpg" media="(max-width:767px)" />
-                            <img src="img/portfoliopicture.jpg" alt="My Image" />
-                        </picture>
-                    </div>
+					<div>
+						<h2>My Story</h2>
+						<p>
+							I am a retail manager/ marketing intern turned UI/UX designer with
+							a passion for intriguing design and seamless usability. I have
+							experience in the retail industry, where I managed teams,
+							developing strategies to meet goals and helped foster stellar
+							customer service practices in myself and those on my team. I also
+							have marketing experience for a new startup based in NYC, creating
+							an online presence through social media. Creating a sense of
+							empathy for people has always been at the forefront during my time
+							working in the customer-facing retail industry. I have taken this
+							focus and pivoted it into a people-first design mindset.
+						</p>
+						<a
+							href="resume/coleisaiahresumecopy.pdf"
+							class="buttoncontact"
+							download
+							>Download my CV</a
+						>
+					</div>
 
-                    <div>
-                        <h2>My Story</h2>
-                        <p>
-                            I am a retail manager/ marketing intern turned UI/UX designer with a passion for intriguing design and seamless usability. I have experience in the retail industry, where I managed teams, developing strategies to
-                            meet goals and helped foster stellar customer service practices in myself and those on my team. I also have marketing experience for a new startup based in NYC, creating an online presence through social media.
-                            Creating a sense of empathy for people has always been at the forefront during my time working in the customer-facing retail industry. I have taken this focus and pivoted it into a people-first design mindset.
-                        </p>
-                        <a href="resume/coleisaiahresumecopy.pdf" class="buttoncontact" download>Download my CV</a>
-                    </div>
+					<div>
+						<h2>Skills & Tools</h2>
+					</div>
+					<div class="row">
+						<div class="col-md-6 col-lg-7">
+							<h3>Relevant Skills</h3>
+							<ul>
+								<li>Wireframing</li>
+								<li>Rapid Prototyping</li>
+								<li>User Research</li>
+								<li>A/B Testing</li>
+								<li>Responsive Design</li>
+								<li>Front End Engineering</li>
+								<li>Visual Design</li>
+								<li>Branding</li>
+								<li>Product Strategy</li>
+							</ul>
+						</div>
+						<h3>Tools</h3>
+						<ul>
+							<li>Sketch</li>
+							<li>Adobe XD</li>
+							<li>Invision</li>
+							<li>Flinto</li>
+							<li>Atom</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</main>
 
-                    <div>
-                        <h2>Skills & Tools</h2>
-                          </div>
-                          <div class="row">
-                            <div class="col-md-6 col-lg-7">
-                    <h3>Relevant Skills</h3>
-                        <ul>
-                            <li>Wireframing</li>
-                            <li>Rapid Prototyping</li>
-                            <li>User Research</li>
-                            <li>A/B Testing</li>
-                            <li>Responsive Design</li>
-                            <li>Front End Engineering</li>
-                            <li>Visual Design</li>
-                            <li>Branding</li>
-                            <li>Product Strategy</li>
-                        </ul>
-                        </div>
-                        <h3>Tools</h3>
-                        <ul>
-                            <li>Sketch</li>
-                            <li>Adobe XD</li>
-                            <li>Invision</li>
-                            <li>Flinto</li>
-                            <li>Atom</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </main>
-
-        <footer id="contact">
-            <div class="container">
-              <div class="centerMe">
-
-
-                <h2>Get In Touch</h2>
-                <p>
-                    Like my work and want to discuss more opportunties? Please dont hestiate to contact me. Call or text me at
-                    <a class="contactme"href="tel3473249093">(347)324-9093</a>
-                    Prefer sending me an email?
-                </p>
-                <div>
-                    <div>
-                        <a href="mailto:Isaiahc1996@gmail.com" class="contactme">Send me an email</a>
-                    </div>
-                    <div>
-                        <a href="LINKEDIN-URL" target="_blank">
-                            <svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.0" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                <g>
-                                    <path d="M32,30c0,1.104-0.896,2-2,2H2c-1.104,0-2-0.896-2-2V2c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V30z" fill="#007BB5" />
-                                    <g>
-                                        <rect fill="#FFFFFF" height="14" width="4" x="7" y="11" />
-                                        <path d="M20.499,11c-2.791,0-3.271,1.018-3.499,2v-2h-4v14h4v-8c0-1.297,0.703-2,2-2c1.266,0,2,0.688,2,2v8h4v-7    C25,14,24.479,11,20.499,11z" fill="#FFFFFF" />
-                                        <circle cx="9" cy="8" fill="#FFFFFF" r="2" />
-                                    </g>
-                                </g>
-                                <g />
-                                <g />
-                                <g />
-                                <g />
-                                <g />
-                                <g />
-                            </svg>
-                        </a>
-                    </div>
-                    <p>Copyright ISAIAH-COLE 2021</p>
-                </div>
-            </div>
-          </div>
-        </footer>
-        <!-- * footer end -->
-    </body>
-    </html>
+		<footer id="contact">
+			<div class="container">
+				<div class="centerMe">
+					<h2>Get In Touch</h2>
+					<p>
+						Like my work and want to discuss more opportunties? Please dont
+						hestiate to contact me. Call or text me at
+						<a class="contactme" href="tel3473249093">(347)324-9093</a>
+						Prefer sending me an email?
+					</p>
+					<div>
+						<div>
+							<a href="mailto:Isaiahc1996@gmail.com" class="contactme"
+								>Send me an email</a
+							>
+						</div>
+						<div>
+							<a href="LINKEDIN-URL" target="_blank">
+								<svg
+									enable-background="new 0 0 32 32"
+									height="32px"
+									id="Layer_1"
+									version="1.0"
+									viewBox="0 0 32 32"
+									width="32px"
+									xml:space="preserve"
+									xmlns="http://www.w3.org/2000/svg"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+								>
+									<g>
+										<path
+											d="M32,30c0,1.104-0.896,2-2,2H2c-1.104,0-2-0.896-2-2V2c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V30z"
+											fill="#007BB5"
+										/>
+										<g>
+											<rect fill="#FFFFFF" height="14" width="4" x="7" y="11" />
+											<path
+												d="M20.499,11c-2.791,0-3.271,1.018-3.499,2v-2h-4v14h4v-8c0-1.297,0.703-2,2-2c1.266,0,2,0.688,2,2v8h4v-7    C25,14,24.479,11,20.499,11z"
+												fill="#FFFFFF"
+											/>
+											<circle cx="9" cy="8" fill="#FFFFFF" r="2" />
+										</g>
+									</g>
+									<g />
+									<g />
+									<g />
+									<g />
+									<g />
+									<g />
+								</svg>
+							</a>
+						</div>
+						<p>Copyright ISAIAH-COLE 2021</p>
+					</div>
+				</div>
+			</div>
+		</footer>
+		<!-- * footer end -->
+	</body>
+</html>
