--- a/index.html
+++ b/index.html
@@ -1,193 +1,154 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Isaiah Cole Product Designer New York,NY</title>
-		<link
-			rel="stylesheet"
-			type="text/css"
-			href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"
-		/>
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,300&display=swap"
-			rel="stylesheet"
-		/>
-		<script
-			src="https://kit.fontawesome.com/01b7c8dea1.js"
-			crossorigin="anonymous"
-		></script>
-	</head>
 
-	<!-- * to add comments like this, select or (be on the line) that you want to comment out and hit "CMD + /" -->
-	<body>
-		<!-- * this should be header tag below -->
-		<header>
-			<div class="container">
-				<div class="navtoggle" id="myNavtoggle">
-					<img src="img/logo.png" alt="Logo" class="logo" />
-					<nav>
-						<ul>
-							<li><a href="index.html">Work</a></li>
-							<li>
-								<a target="_blank" href="resume/coleisaiahresumecopy.pdf"
-									>Resume</a
-								>
-							</li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="#contact">Contact</a></li>
-							<li>
-								<a
-									href="javascript:void(0);"
-									class="icon"
-									onclick="menuToggle()"
-								>
-									<i class="fas fa-hamburger"></i>
-								</a>
-							</li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</header>
-		<!-- * end of header tag -->
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Isaiah Cole Product Designer New York,NY</title>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,300&display=swap" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/01b7c8dea1.js" crossorigin="anonymous"></script>
+</head>
 
-		<!-- * our main content below -->
-		<main>
-			<div id="hero">
-				<div class="container">
-					<h1>Hello my name is Isaiah Cole</h1>
-					<span>
-						<h2>
-							I am a UX/UI designer from NYC and I create beautiful people
-							centric designs
-						</h2>
-					</span>
-					<p></p>
-				</div>
-			</div>
+<!-- * to add comments like this, select or (be on the line) that you want to comment out and hit "CMD + /" -->
 
-			<div class="container">
-				<div id="work">
-					<h2>My Work</h2>
+<body>
+  <!-- * this should be header tag below -->
+  <header>
+    <div class="container">
+      <div class="navtoggle" id="myNavtoggle">
+        <img src="img/logo.png" alt="Logo" class="logo" />
+        <nav>
+          <ul>
+            <li><a href="index.html">Work</a></li>
+            <li>
+              <a target="_blank" href="resume/coleisaiahresumecopy.pdf">Resume</a>
+            </li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li>
+              <a href="javascript:void(0);" class="icon" onclick="menuToggle()">
+                <i class="fas fa-hamburger"></i>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <!-- * end of header tag -->
 
-					<div class="row">
-						<div class="col-md-6 col-lg-7">
-							<picture>
-								<source
-									srcset="img/linkup/linkup-thumbnail.png"
-									media="(max-width:767px)"
-								/>
-								<img src="img/linkup/linkup-thumbnail.png" alt="My Image" />
-							</picture>
-						</div>
+  <!-- * our main content below -->
+  <main>
+    <div id="hero">
+      <div class="container">
+        <h1>Hello my name is Isaiah Cole</h1>
+        <div>
+          <h2>
+            I am a UX/UI designer from NYC and I create beautiful people
+            centric designs
+          </h2>
+        </div>
+        <p></p>
+      </div>
+    </div>
 
-						<div class="col-md-6 col-lg-5">
-							<h3>LinkUp</h3>
+    <div class="container">
+      <div id="work">
+        <h2>My Work</h2>
 
-							<p>
-								A location based web app with multiple break points for mobile,
-								tablet and desktop. Using A/B testing and conducting user
-								research I created an app that allows user to find food on the
-								go based on their preferences
-							</p>
-							<a href="linkup.html" class="button">Read more</a>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-6 col-lg-7">
-						<picture>
-							<source
-								srcset="img/sterlingacumen/sterling-acumen-thumbnail.png"
-								media="(max-width:767px)"
-							/>
-							<img
-								src="img/sterlingacumen/sterling-acumen-thumbnail.png"
-								alt="My Image"
-							/>
-						</picture>
-					</div>
+        <div class="row">
+          <div class="col-md-6 col-lg-7">
+            <picture>
+              <source srcset="img/linkup/linkup-thumbnail.png" media="(max-width:767px)" />
+              <img src="img/linkup/linkup-thumbnail.png" alt="My Image" />
+            </picture>
+          </div>
 
-					<div class="col-md-6 col-lg-5">
-						<h3>Sterling Acumen</h3>
+          <div class="col-md-6 col-lg-5">
+            <h3>LinkUp</h3>
 
-						<p>
-							A native Android and iOS mobile banking app geared towards teens
-							and young adults who are new to managing finances.
-						</p>
-						<a href="#" class="button">Read more</a>
-					</div>
-				</div>
-			</div>
+            <p>
+              A location based web app with multiple break points for mobile,
+              tablet and desktop. Using A/B testing and conducting user
+              research I created an app that allows user to find food on the
+              go based on their preferences
+            </p>
+            <a href="linkup.html" class="button">Read more</a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 col-lg-7">
+          <picture>
+            <source srcset="img/sterlingacumen/sterling-acumen-thumbnail.png" media="(max-width:767px)" />
+            <img src="img/sterlingacumen/sterling-acumen-thumbnail.png" alt="My Image" />
+          </picture>
+        </div>
 
-			<div class="row">
-				<div class="col-md-6 col-lg-7"></div>
-			</div>
-		</main>
-		<!-- * end of main tag -->
+        <div class="col-md-6 col-lg-5">
+          <h3>Sterling Acumen</h3>
 
-		<!-- * footer start -->
+          <p>
+            A native Android and iOS mobile banking app geared towards teens
+            and young adults who are new to managing finances.
+          </p>
+          <a href="#" class="button">Read more</a>
+        </div>
+      </div>
+    </div>
 
-		<footer id="contact">
-			<div class="container">
-				<div class="centerMe">
-					<h2>Get In Touch</h2>
-					<p>
-						Like my work and want to discuss more opportunties? Please dont
-						hestiate to contact me. Call or text me at
-						<a class="contactme" href="tel3473249093">(347)324-9093</a>
-						Prefer sending me an email?
-					</p>
-					<div>
-						<div>
-							<a href="mailto:Isaiahc1996@gmail.com" class="contactme"
-								>Send me an email</a
-							>
-						</div>
-						<div>
-							<a href="LINKEDIN-URL" target="_blank">
-								<svg
-									enable-background="new 0 0 32 32"
-									height="32px"
-									id="Layer_1"
-									version="1.0"
-									viewBox="0 0 32 32"
-									width="32px"
-									xml:space="preserve"
-									xmlns="http://www.w3.org/2000/svg"
-									xmlns:xlink="http://www.w3.org/1999/xlink"
-								>
-									<g>
-										<path
-											d="M32,30c0,1.104-0.896,2-2,2H2c-1.104,0-2-0.896-2-2V2c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V30z"
-											fill="#007BB5"
-										/>
-										<g>
-											<rect fill="#FFFFFF" height="14" width="4" x="7" y="11" />
-											<path
-												d="M20.499,11c-2.791,0-3.271,1.018-3.499,2v-2h-4v14h4v-8c0-1.297,0.703-2,2-2c1.266,0,2,0.688,2,2v8h4v-7    C25,14,24.479,11,20.499,11z"
-												fill="#FFFFFF"
-											/>
-											<circle cx="9" cy="8" fill="#FFFFFF" r="2" />
-										</g>
-									</g>
-									<g />
-									<g />
-									<g />
-									<g />
-									<g />
-									<g />
-								</svg>
-							</a>
-						</div>
-						<p>Copyright ISAIAH-COLE 2021</p>
-					</div>
-				</div>
-			</div>
-		</footer>
-		<!-- * footer end -->
-		<script src="js/scripts.js"></script>
-	</body>
+    <div class="row">
+      <div class="col-md-6 col-lg-7"></div>
+    </div>
+  </main>
+  <!-- * end of main tag -->
+
+  <!-- * footer start -->
+
+  <footer id="contact">
+    <div class="container">
+      <div class="centerMe">
+        <h2>Get In Touch</h2>
+        <p>
+          Like my work and want to discuss more opportunties? Please dont
+          hestiate to contact me. Call or text me at
+          <a class="contactme" href="tel3473249093">(347)324-9093</a>
+          Prefer sending me an email?
+        </p>
+        <div>
+          <div>
+            <a href="mailto:Isaiahc1996@gmail.com" class="contactme">Send me an email</a>
+          </div>
+          <div>
+            <a href="LINKEDIN-URL" target="_blank">
+              <svg enable-background="new 0 0 32 32" height="32px" id="Layer_1"  viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <g>
+                  <path d="M32,30c0,1.104-0.896,2-2,2H2c-1.104,0-2-0.896-2-2V2c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V30z" fill="#007BB5" />
+                  <g>
+                    <rect fill="#FFFFFF" height="14" width="4" x="7" y="11" />
+                    <path d="M20.499,11c-2.791,0-3.271,1.018-3.499,2v-2h-4v14h4v-8c0-1.297,0.703-2,2-2c1.266,0,2,0.688,2,2v8h4v-7    C25,14,24.479,11,20.499,11z" fill="#FFFFFF" />
+                    <circle cx="9" cy="8" fill="#FFFFFF" r="2" />
+                  </g>
+                </g>
+                <g />
+                <g />
+                <g />
+                <g />
+                <g />
+                <g />
+              </svg>
+            </a>
+          </div>
+          <p>Copyright ISAIAH-COLE 2021</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- * footer end -->
+  <script src="js/scripts.js"></script>
+</body>
+
 </html>
