--- a/linkup.html
+++ b/linkup.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/style.css"/>
-        <link rel="stylesheet" href="/css/style.css" />
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
-        <meta charset="utf-8" />
-        <i class="fas fa-bars"></i>
-        <title>Isaiah Cole Product Designer New York,NY</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-    </head>
+
+<head>
+  <title>Isaiah Cole UI/UX Designer About</title>
+
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,300&display=swap" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8" />
+  <i class="fas fa-bars"></i>
+
 
     <!-- * to add comments like this, select or (be on the line) that you want to comment out and hit "CMD + /" -->
-    <body>
+
         <!-- * this should be header tag below -->
         <header>
           <div class="container">
